<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.graphaware.neo4j</groupId>
  <artifactId>neo4j-stress-test</artifactId>
  <version>2.3.0.35-SNAPSHOT</version>

  <profiles>
    <profile>
      <id>profile-2.3-M03</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <graphaware.framework>2.3.0.35-SNAPSHOT</graphaware.framework>
        <neo4j.version>2.3.0-RC1</neo4j.version>
        <munge.symbols>NEO4J_2_3</munge.symbols>
      </properties>
    </profile>
    <profile>
      <id>profile-2.2.5</id>
      <properties>
        <graphaware.framework>2.2.5.34</graphaware.framework>
        <neo4j.version>2.2.5</neo4j.version>
        <munge.symbols>NEO4J_2_2_5</munge.symbols>
      </properties>
    </profile>
  </profiles>
  
  <!--parent>
    <groupId>com.graphaware.neo4j</groupId>
    <artifactId>module-parent</artifactId>
    <version>2.2.5.34</version>
  </parent-->

  <name>GraphAware Test Module</name>
  <description>
  </description>
  <url>http://graphaware.com</url>

  <licenses>
    <license>
      <name>GNU General Public License, version 3</name>
      <url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <distributionManagement>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
  </distributionManagement>
  <properties>
    <spring.version>4.2.0.RELEASE</spring.version>
    <java.version>1.7</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.7</maven.compiler.source>
    <maven.compiler.target>1.7</maven.compiler.target>
  </properties>

  <scm>
    <connection>scm:git:git@github.com:graphaware/neo4j-stress-test.git</connection>
    <developerConnection>scm:git:git@github.com:graphaware/neo4j-stress-test.git</developerConnection>
    <url>git@github.com:graphaware/neo4j-stress-test.git</url>
    <tag>HEAD</tag>
  </scm>

  <developers>
    <developer>
      <id>alenegro81</id>
      <name>Alessandro Negro</name>
      <email>alessandro@graphaware.com</email>
    </developer>
  </developers>


  <inceptionYear>2015</inceptionYear>

  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/graphaware/neo4j-stress-test/issues</url>
  </issueManagement>

  <organization>
    <name>Graph Aware Limited</name>
    <url>http://graphaware.com</url>
  </organization>


  <dependencies>
    <dependency>
      <groupId>com.graphaware.neo4j</groupId>
      <artifactId>api</artifactId>
      <version>${graphaware.framework}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.graphaware.neo4j</groupId>
      <artifactId>common</artifactId>
      <version>${graphaware.framework}</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>org.ow2.asm</groupId>
          <artifactId>asm</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.graphaware.neo4j</groupId>
      <artifactId>runtime</artifactId>
      <version>${graphaware.framework}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.graphaware.neo4j</groupId>
      <artifactId>runtime-api</artifactId>
      <version>${graphaware.framework}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.graphaware.neo4j</groupId>
      <artifactId>writer</artifactId>
      <version>${graphaware.framework}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.graphaware.neo4j</groupId>
      <artifactId>writer-api</artifactId>
      <version>${graphaware.framework}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.graphaware.neo4j</groupId>
      <artifactId>server-common</artifactId>
      <version>${graphaware.framework}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.graphaware.neo4j</groupId>
      <artifactId>tx-api</artifactId>
      <version>${graphaware.framework}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.graphaware.neo4j</groupId>
      <artifactId>tx-executor</artifactId>
      <version>${graphaware.framework}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.graphaware.neo4j</groupId>
      <artifactId>server-enterprise</artifactId>
      <version>${graphaware.framework}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.7</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-collections4</artifactId>
      <version>4.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.4</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-math3</artifactId>
      <version>3.3</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.esotericsoftware.kryo</groupId>
      <artifactId>kryo</artifactId>
      <version>2.16</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
      <version>2.2.3</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-annotations</artifactId>
      <version>2.2.3</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.2.3</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-core</artifactId>
      <version>4.2.0.RELEASE</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
      <version>4.2.0.RELEASE</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-web</artifactId>
      <version>4.2.0.RELEASE</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-webmvc</artifactId>
      <version>4.2.0.RELEASE</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-expression</artifactId>
      <version>4.2.0.RELEASE</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>17.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.neo4j</groupId>
      <artifactId>server-api</artifactId>
      <version>${neo4j.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.graphaware.neo4j</groupId>
      <artifactId>tests</artifactId>
      <version>${graphaware.framework}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.neo4j</groupId>
      <artifactId>neo4j</artifactId>
      <version>${neo4j.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.neo4j</groupId>
      <artifactId>neo4j-primitive-collections</artifactId>
      <version>${neo4j.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.neo4j</groupId>
      <artifactId>neo4j-io</artifactId>
      <version>${neo4j.version}</version>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.neo4j</groupId>
      <artifactId>neo4j-kernel</artifactId>
      <version>${neo4j.version}</version>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.neo4j.app</groupId>
      <artifactId>neo4j-server</artifactId>
      <version>${neo4j.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.neo4j.app</groupId>
      <artifactId>neo4j-server</artifactId>
      <version>${neo4j.version}</version>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.neo4j.app</groupId>
      <artifactId>neo4j-server</artifactId>
      <version>${neo4j.version}</version>
      <classifier>static-web</classifier>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.neo4j.app</groupId>
      <artifactId>neo4j-server-enterprise</artifactId>
      <version>${neo4j.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.neo4j</groupId>
      <artifactId>neo4j-ha</artifactId>
      <version>${neo4j.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.neo4j</groupId>
      <artifactId>neo4j-management</artifactId>
      <version>${neo4j.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-server</artifactId>
      <version>9.2.4.v20141103</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-servlet</artifactId>
      <version>9.2.4.v20141103</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>1.7.7</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.17</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-all</artifactId>
      <version>1.9.5</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <version>4.5</version>
    </dependency>
    <dependency>
      <groupId>javax.transaction</groupId>
      <artifactId>javax.transaction-api</artifactId>
      <version>1.2</version>
    </dependency>


    <!--dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-webmvc</artifactId>
    </dependency>

    <dependency>
      <groupId>com.graphaware.neo4j</groupId>
      <artifactId>server-community</artifactId>
    </dependency-->
    <dependency>
      <groupId>commons-math</groupId>
      <artifactId>commons-math</artifactId>
      <version>1.2</version>
    </dependency>

  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.18.1</version>
        <configuration>
          <argLine>-Xmx2G</argLine>
          <systemPropertyVariables>
             <databaseCSVPath>${basedir}/database/pokec.txt</databaseCSVPath>
           </systemPropertyVariables>
        </configuration>
        <!--executions>
          <execution>
            <id>unittests</id>
            <phase>install</phase>
            <goals>
              <goal>test</goal>
            </goals>
            <configuration>
              <skip>false</skip>
              <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
              <includes>
                <include>**/**/**/*Test.java</include>
              </includes>
            </configuration>
          </execution>
        </executions-->
      </plugin>
      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>munge-maven-plugin</artifactId>
        <version>1.0</version>
        <executions>
          <execution>
            <id>munge</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>munge</goal>
            </goals>
            <configuration>
              <mungedDirectory>${project.build.directory}/munged</mungedDirectory>
              <symbols>${munge.symbols}</symbols>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.googlecode.maven-download-plugin</groupId>
        <artifactId>maven-download-plugin</artifactId>
        <version>1.1.0</version>
        <executions>
          <execution>
            <!-- the wget goal actually binds itself to this phase by default -->
            <phase>process-resources</phase>
            <goals>
              <goal>wget</goal>
            </goals>
            <configuration>
              <url>https://www.dropbox.com/s/ikixrw71vr0a6hw/pokec.txt?dl=1</url>
              <outputFileName>pokec.txt</outputFileName>
              <!--skipCache>true</skipCache-->
              <outputDirectory>${basedir}/database</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
